# pypowens

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  __main__.py  analysis.py  config.py  data.py  deps.py  enrich.py  frequency.py  helpers.py  main.py  recap.py  recurring.py  state.py  web.py
app/static/: app.js  style.css
app/templates/: analysis.html  base.html  frequency.html  recap.html  recurring.html
docs/: DEVLOG.md
examples/: quickstart.py
src/pypowens/: __init__.py  client.py  exceptions.py  models.py
tests/: test_client.py  test_recurring.py
