[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypowens"
version = "0.1.0"
description = "Async Python wrapper for the Powens (ex-Budget Insight) bank data aggregation API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jérémie Bartoli" }]
keywords = ["powens", "budget-insight", "open-banking", "aggregation", "psd2", "fintech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "respx>=0.21", "ruff>=0.6"]
app = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "jinja2>=3.1", "python-dotenv>=1.0"]

[project.urls]
Homepage = "https://github.com/bartolije/pypowens"
Repository = "https://github.com/bartolije/pypowens"
"Powens API docs" = "https://docs.powens.com/"

[tool.hatch.build.targets.wheel]
packages = ["src/pypowens"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI dependency-injection idiom: Depends()/Query() in argument defaults.
"app/*" = ["B008"]
